# DEEPFIN

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_dataset.py  dfmaker3000.py  predict.py  requirements.txt  setup.py  train.py
dataGenius/: calculate_data.cpp  collect_data.py  process_data.py  transform_data.py
scripts/: collect_data.py  sync_data.py
src/: dfmaker3000.py
src/dataGenius/: calculate_data.cpp
